examples/invalid_scl/type_error_arith.scl
type R(i64, usize)
rel S(b) :- R(b, c), Q(b + c)
